--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -92,11 +92,11 @@ email = "me at adamburns.org"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "3260 S. First Ave", city = "Maywood", region = "IL", postcode = "60153", country = "United States", country_code = "US"}
+address = {street = "2221 University Ave SE", city = "Minneapolis", region = "MN", postcode = "55414", country = "United States", country_code = "US"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-coordinates = {latitude = "41.857047129050216", longitude = "-87.83399125641296"}
+coordinates = {latitude = "44.9749363", longitude = "-93.2240452"},
 
 # Directions for visitors to locate you.
 #directions = "Enter Building 1 and take the stairs to Office 200 on Floor 2"
