--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -96,7 +96,7 @@ address = {street = "2221 University Ave SE", city = "Minneapolis", region = "MN
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-coordinates = {latitude = "44.9749363", longitude = "-93.2240452"},
+coordinates = {latitude = "44.9749363", longitude = "-93.2240452"}
 
 # Directions for visitors to locate you.
 #directions = "Enter Building 1 and take the stairs to Office 200 on Floor 2"
