--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,7 +10,7 @@ title = "Adam A.C. Burns"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://adamburns.org/"
+baseurl = "https://adamacburns.com/"
 
 
 ############################
